@@ -22,6 +22,7 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.io.File;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -35,9 +36,11 @@ public class DocumentService {
     private final FileItemRepository fileItemRepository;
     private final FileService fileService;
     private final UserMembershipRepository userMembershipRepository;
+    private final com.ang.Backend.domain.role.repository.UserRoleRepository userRoleRepository;
     private final ScopeRepository scopeRepository;
     private final ScopeService scopeService;
     private final RestTemplate restTemplate;
+    private final com.ang.Backend.domain.user.repository.UserRepository userRepository;
 
     @Value("${ai.base-url}")
     private String aiBaseUrl;
@@ -53,9 +56,16 @@ public class DocumentService {
                     DocumentEntity doc = DocumentEntity.builder()
                             .title(file.getOriginalFileName())
                             .file(file)
+                            .owner(file.getUploader()) // Set owner to prevent null constraint violation
                             .status(DocumentStatus.DRAFT)
                             .originalContent("Extracted content from PDF: " + file.getOriginalFileName())
                             .build();
+                    
+                    // If owner is null and DB requires it, we fallback to finding admin
+                    if (doc.getOwner() == null) {
+                        userRepository.findByEmpNo("admin").ifPresent(doc::setOwner);
+                    }
+                    
                     documentRepository.save(doc);
                     log.info("Synced File to Document: {}", file.getOriginalFileName());
                 }
@@ -71,13 +81,16 @@ public class DocumentService {
 
     @Transactional
     public Long create(String title, MultipartFile file, User user, Integer targetScopeId) throws Exception {
-        var storedFile = fileService.storeFile(file, user);
-
         Scope targetScope = null;
+        String subPath = null;
+
         if (targetScopeId != null) {
             targetScope = scopeRepository.findById(targetScopeId)
                     .orElseThrow(() -> new RuntimeException("대상 부서를 찾을 수 없습니다."));
+            subPath = "Scopes" + File.separator + targetScope.getScopeCode();
         }
+
+        var storedFile = fileService.storeFile(file, user, subPath);
 
         DocumentEntity doc = DocumentEntity.builder()
                 .title(title)
@@ -142,34 +155,95 @@ public class DocumentService {
                 .map(UserMembership::getScope)
                 .collect(Collectors.toList());
 
+        // 최고관리자 권한 확인
+        List<com.ang.Backend.domain.role.entity.UserRole> roles = userRoleRepository.findByUserOrderByRoleLevelDesc(user);
+        boolean isSuperAdmin = roles.stream().anyMatch(r -> r.getRole().getRoleLevel() >= 100);
+
         if (targetScopeId != null) {
             // 특정 부서 필터링 시 보안 검증: 요청한 부서가 사용자의 권한 범위 내에 있는지 확인
             Scope targetScope = scopeRepository.findById(targetScopeId)
                     .orElseThrow(() -> new RuntimeException("해당 부서를 찾을 수 없습니다."));
             
-            boolean hasAccess = myScopes.stream()
-                    .anyMatch(myScope -> isSameOrChild(myScope, targetScope));
-            
-            if (!hasAccess) {
-                throw new RuntimeException("해당 부서의 문서에 접근할 권한이 없습니다.");
+            if (!isSuperAdmin) {
+                // 새로운 로직: 사용자가 속한 부서의 Level 2 조상을 찾음
+                // 예: 영진전문대학교(L1) -> 평생교육원(L2) -> 교육팀(L3)
+                // 사용자가 교육팀 소속이면 평생교육원 산하 모든 부서 문서를 볼 수 있음
+                
+                boolean hasAccess = false;
+                for (Scope myScope : myScopes) {
+                    Scope myLevel2 = getLevel2Ancestor(myScope);
+                    Scope targetLevel2 = getLevel2Ancestor(targetScope);
+                    
+                    if (myLevel2 != null && targetLevel2 != null && 
+                        myLevel2.getScopeId().equals(targetLevel2.getScopeId())) {
+                        hasAccess = true;
+                        break;
+                    }
+                    // 혹은 기존처럼 직계 부모-자식 관계인 경우도 허용
+                    if (isSameOrChild(myScope, targetScope)) {
+                        hasAccess = true;
+                        break;
+                    }
+                }
+                
+                if (!hasAccess) {
+                    throw new RuntimeException("해당 부서의 문서에 접근할 권한이 없습니다.");
+                }
             }
             
             scopeIds = scopeService.getAllSubScopeIds(targetScope);
         } else {
             // 전체 조회 시
-            if (myScopes.isEmpty()) {
-                return List.of();
-            }
+            if (isSuperAdmin) {
+                // 최고관리자는 모든 부서 ID 가져오기
+                scopeIds = scopeRepository.findAll().stream().map(Scope::getScopeId).collect(Collectors.toList());
+            } else {
+                if (myScopes.isEmpty()) {
+                    return List.of();
+                }
 
-            scopeIds = myScopes.stream()
-                    .flatMap(scope -> scopeService.getAllSubScopeIds(scope).stream())
-                    .distinct()
-                    .collect(Collectors.toList());
+                // 사용자가 속한 모든 L2 조상들의 모든 하위 부서 ID를 모음
+                scopeIds = myScopes.stream()
+                        .map(this::getLevel2Ancestor)
+                        .filter(java.util.Objects::nonNull)
+                        .flatMap(l2 -> scopeService.getAllSubScopeIds(l2).stream())
+                        .distinct()
+                        .collect(Collectors.toList());
+                
+                // 본인이 속한 부서의 하위 부서들도 포함 (L2가 없는 경우 대비)
+                List<Integer> myDirectSubScopes = myScopes.stream()
+                        .flatMap(scope -> scopeService.getAllSubScopeIds(scope).stream())
+                        .distinct()
+                        .toList();
+                
+                scopeIds.addAll(myDirectSubScopes);
+                scopeIds = scopeIds.stream().distinct().collect(Collectors.toList());
+            }
         }
 
         return documentRepository.searchByScopes(scopeIds, keyword).stream()
                 .map(DocumentDto.Response::fromEntity)
                 .collect(Collectors.toList());
+    }
+
+    private Scope getLevel2Ancestor(Scope scope) {
+        if (scope == null) return null;
+        
+        // Root (Level 1)
+        if (scope.getParentScope() == null) return null;
+        
+        // Level 2 (Parent is root)
+        if (scope.getParentScope().getParentScope() == null) return scope;
+        
+        // Level 3 (Parent is Level 2)
+        if (scope.getParentScope().getParentScope().getParentScope() == null) return scope.getParentScope();
+        
+        // 그 이상 깊이가 있다면 계속 위로 올라가서 Level 2를 찾음
+        Scope current = scope;
+        while (current.getParentScope() != null && current.getParentScope().getParentScope() != null) {
+            current = current.getParentScope();
+        }
+        return current;
     }
 
     private boolean isSameOrChild(Scope parent, Scope target) {
